--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ $phones: 480px;
 
 //import
 //@import "mixins/*";
-@import "layout/media";
+@import "layout/mixins";
 @import "layout/setup";
 
 @import "blocks/**/*";
