--- a/src/styles/layout/setup.scss
+++ b/src/styles/layout/setup.scss
@@ -1,4 +1,5 @@
 html {
+  height: 100%;
   font-size: 16px;
   
   @include tablets {
@@ -10,35 +11,15 @@ html {
   }
 }
 
-body {
+body {  
   height: 100%;
   margin: 0;
   font-family:  -apple-system, BlinkMacSystemFont, Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
+  font-size: 13px;
+  font-weight: 400;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
 }
-
-.mv__wrap {  
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: relative;
-  overflow: auto;
-  background-color: rgb(71, 71, 71);
-}
-
-.mv__layer {
-  min-height: 100%;
-  margin: 0 5px;
-}
-
-.mv__cont {
-  display: block;
-  margin: 60px auto 85px;
-}
-
-
 
 ul {
   padding: 0;
@@ -50,6 +31,6 @@ p {
   margin: 0;
 }
 
-* {
-  box-sizing: border-box;
-}
+// * {
+//   box-sizing: border-box;
+// }
