--- a/src/views/video.pug
+++ b/src/views/video.pug
@@ -18,10 +18,10 @@ block content
                 .mv__pl-control.mv__pl-control_next
             //window with video
             .mv__player-box
-              .pr
-                .pr_bt
-                .pr_bt
-                .pr_bt
+              .load
+                .load__bt
+                .load__bt
+                .load__bt
             //button exit-small- ->
             .mv__top-control_wrap
               .mv__top-control
