--- a/src/views/video.pug
+++ b/src/views/video.pug
@@ -22,6 +22,8 @@ block content
                 .load__bt
                 .load__bt
                 .load__bt
+              .mv__player-ratio
+                .mv_videoplayer(style="background-image: url('https://i.ytimg.com/vi/0nZFFEsFJzI/maxresdefault.jpg');")              
             //button exit-small- ->
             .mv__top-control_wrap
               .mv__top-control
@@ -65,10 +67,10 @@ block content
                   button.flat__button
                     .mv__icon.mv__icon_like
                     .mv__action-link Мне нравится
-                  button.flat__button.second
+                  button.flat__button.second.hide
                     .mv__icon.mv__icon_share
                     .mv__action-link Поделиться
-                  button.flat__button.second
+                  button.flat__button.second.hide
                     .mv__icon.mv__icon_add
                     .mv__action-link Добавить к себе
                   .flat__button.second
