--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -7,6 +7,7 @@
 
 .mv__block-wrap {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .flat__button {
@@ -36,7 +37,7 @@
 
     .mv__icon_like {
       opacity: 1;
-    }
+    }  
   }
 
   &.second {
@@ -51,39 +52,44 @@
       background-color: #e5ebf1;
     }
   }
+
+  &.hide {
+    .mv__action-link{    
+      @include tablets {
+        display: none;      
+      }
+    }
+
+    .mv__icon {
+      @include tablets {
+        margin-left: 6px;
+      }
+    }
+  }  
 }
 
+
+
 .mv__icon_like {
-  background: url(../img/video_actions.png) no-repeat 0 0;
-  height: 10px;
-  width: 13px;
   margin: 2px 8px 0 3px;
   opacity: 0.4; 
   transition: opacity 0.2s ease;
 }
 
-
 .mv__icon_share {
-  background: url(../img/video_actions.png) no-repeat 0 -44px;  
-  height: 13px;
-  width: 12px;
   margin-right: 7px;
   margin-bottom: -2px;
   display: inline-block;
   position: relative;
 }
 
-.mv__icon_add {
-  background: url(../img/video_actions.png?8) no-repeat 0 -15px;
-  height: 12px;
-  width: 12px;
+.mv__icon_add {  
   margin-bottom: -2px;
   margin-right: 5px;
   display: inline-block;
 }
 
-.mv__icon_arrow {
-  background-image: url(../img/dd_arrow.png);
+.mv__icon_arrow {  
   background-repeat: no-repeat;
   background-position: right 50%;
   padding-right: 15px;
