--- a/src/styles/blocks/animation.scss
+++ b/src/styles/blocks/animation.scss
@@ -1,9 +1,17 @@
 .load {
-  position: relative;
+  position: absolute;
   top: 50%;
+  left: 50%;
   opacity: 1;
   text-align: center;
   line-height: 0;
+  z-index: 1;
+  animation-duration: 300ms;
+  animation-name: hideLoad;
+  animation-delay: 5000ms;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
 }
 
 .load__bt {
@@ -42,5 +50,15 @@
 
   100% {
     opacity: 0.2;
+  }
+}
+
+@keyframes hideLoad {
+  0% { 
+    opacity: 1;
+  }
+  
+  100% {
+    opacity: 0;
   }
 }
