--- a/src/styles/blocks/box.scss
+++ b/src/styles/blocks/box.scss
@@ -15,8 +15,12 @@
 
 .mv__cont {
   display: block;
-  margin: 60px auto 85px;
-  width: 960px;
+  margin: 80px auto 0px;
+  max-width: 960px;
+
+  @include tablets {
+    margin: 30px 0 5px 0;
+  }
 }
 
 .mv__box {
@@ -28,8 +32,46 @@
 }
 
 .mv__player-box {
-  height: 405px;
-  width: 720px;
-  padding-right: 240px;
+ // height: 405px;
+  max-width: 720px;
+  //width: 100%;
+  margin-right: 240px;
   background: #000;
+  position: relative;
+
+
+  @include tablets {
+    margin-right: 121px;
+    max-width: 47rem;
+  }
+
+  @include point {
+    margin-right: 0px;
+  }
 }
+
+.mv__player-ratio {
+  position: relative;
+  height: 0;
+  border: none;
+  padding-top: 56.25%; 
+}
+
+.mv_videoplayer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+// .mv_videoplayer {
+//   background-size: cover;
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   width: 100%;
+//   height: 100%;
+// }
