--- a/src/styles/layout/mixins.scss
+++ b/src/styles/layout/mixins.scss
@@ -1,9 +1,37 @@
+@mixin phones {
+  @media screen and (max-width: $phones) {
+    @content;
+  }
+}
+
+@mixin tablets {
+  @media screen and (max-width: $tablets) {
+    @content;
+  }
+}
+
+
+
+@mixin laptop {
+  @media screen and (max-width: $laptop) {
+    @content;
+  }
+}
+
+
 @mixin point {
   @media screen and (max-width: 500px) {
     @content;
   }
 }
 
+%clearfix {
+	&:after {
+		content: "";
+		display: block;
+		clear: both;
+	}
+}
 
 // @include phones {
 //   padding-bottom: 0px;
