edit photo link

--- a/src/views/video.pug
+++ b/src/views/video.pug
@@ -79,11 +79,11 @@ block content
               //about author
               .mv__author-block
                 .mv__block-wrap
-                  a.mv__author-photo-wrap
+                  a(href="#").mv__author-photo-wrap
                     img(src="https://pp.userapi.com/c639528/v639528480/65f6f/jlXsrxKHFOU.jpg", alt="").author-photo
                   .mv__author-info
                     .info-author-name
-                      a(href="") Михаил Гуськов
+                      a(href="#") Михаил Гуськов
                     .info-date 29 окт 2016 в 13:11
               .mv__description-block 
                 .mv__description
@@ -91,7 +91,7 @@ block content
                     p Hardwell feat. Jay Sean - Thinking About You <br> Multi-platinum-selling artist Jay Sean and Dutch award-winning dance DJ Hardwell release the official music video for their current single ‘Thinking About You’. Premiered on MTV’s Snapchat Discover, the single was one of the most Shazamed songs at the annual Amsterdam Dance Event festival last week, adding to the growing success of the records current popularity. 
               .mv__comment-block  
                 .mv__comment
-                  a.comment__user-link
+                  a(href="#").comment__user-link
                     img(src="https://pp.userapi.com/c639528/v639528480/65f6f/jlXsrxKHFOU.jpg").comment__photo
                   .mv__comment-placeholder Написать Комментарий...
             .mv__info-narrow-column
