--- a/src/views/template.pug
+++ b/src/views/template.pug
@@ -12,3 +12,6 @@ html(lang="ru")
       
   body()
     block content
+
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(src="./js/main.js")
